--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
 	<section>
 		<h1>Git, GitHub & the Command Line</h1>
-		<p>Gotta love becoming a collaborative coder <3</p>
-		<img src="img/happy-blue-robot.png">
+		<p>Gotta love becoming a collaborative coder 💜 and love Unicorns<span id="unicorn">🦄</span></p>
+
+		<img src="img/unicorn.png">
 	</section>
 </body>
 </html>
